<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.widget.TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_activity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/second_activity" />

    <Button
        android:id="@+id/button2"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/third_activity" />

    <Button
        android:id="@+id/button3"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/fourth_activity" />

    <Button
        android:id="@+id/button4"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/fifth_activity" />

    <Button
        android:id="@+id/button5"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/sixth_activity" />

    <Button
        android:id="@+id/button6"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/seventh_activity" />

</LinearLayout>